Fixed graph axes

--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -614,7 +614,7 @@ improving database performance for our most common operation.\\
       \begin{tikzpicture}
         \begin{axis}[title=Vertical Scaling,
             xlabel = Time (sec),
-            ylabel = 200 users/sec,
+            ylabel = Users/sec,
             legend pos = outer north east,
           ]
           \addplot[thick, orange] table [
@@ -666,7 +666,7 @@ improving database performance for our most common operation.\\
       \begin{tikzpicture}
         \begin{axis}[title=Horizontal Scaling,
             xlabel = Time (sec),
-            ylabel = 200 users/sec,
+            ylabel = Users/sec,
             legend pos = outer north east,
           ]
           \addplot[thick, orange] table [
