--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -15,9 +15,9 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
+%------------------------------------------------------------------------------
 
 \documentclass{article}
 
@@ -422,11 +422,17 @@ The gems we used include:
       \textbf{Model} & \textbf{Purpose}\\
       \hline
       \rowcolor[gray]{.9}
-      Company & This table contains the non-financial information about the company.  It is what matches a stock symbol to a complete company name, and other information about the company.\\
-      Favorite Company & This table is what links a User to the companies that they favorited.\\
+      Company & This table contains the non-financial information about the
+      company.  It is what matches a stock symbol to a complete company name,
+      and other information about the company.\\
+      Favorite Company & This table is what links a User to the companies that
+      they favorited.\\
       \rowcolor[gray]{.9}
-      Finance Cache & This table stores the data received from Yahoo! Finance so we can reduce third-party API hits.\\
-      Sentiment Cache & This table stores the sentiment data calculated from the data received from Twitter so we can both reduce third-party API hits and greatly improve performance.\\
+      Finance Cache & This table stores the data received from Yahoo! Finance
+      so we can reduce third-party API hits.\\
+      Sentiment Cache & This table stores the sentiment data calculated from
+      the data received from Twitter so we can both reduce third-party API hits
+      and greatly improve performance.\\
       \rowcolor[gray]{.9}
       User & This table stores User account data.\\
       \hline
