--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -731,7 +731,7 @@ improving database performance for our most common operation.\\
   (LB), two application servers (S0 and S1) and a MySQL server (DB).  This is a
   fairly standard horizontal scaling technique that makes it easy to increase
   the number of application servers dynamically (a side benefit of this is that
-  each application server can be small, cheap, and reliable as a new server
+  each application server can be small, cheap, and unreliable, as a new server
   can be spun up to take its place if it fails).
 
   \subsubsection{Network diagram}
