--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -305,7 +305,7 @@ for syntactic or logical errors. In doing so, the time from the outlining of a
 feature to pushing production ready code was optimized and we were able to save
 a substantial amount of time.
 
-\subsection{Important Gems Used For Development}
+\subsection{Important gems used for development}
 We utilized several important rails gems that helped make the development of
 our application much easier. The gems listed below added important
 functionality such as user management and wrappers for APIs. Using the gems is
@@ -335,7 +335,7 @@ The gems we used include:
 \pagebreak
 
 \begin{mainSection}{Application}
-  \subsection{Application Architecture}
+  \subsection{Application architecture}
   Ruby on Rails' use of a MVC (Model View Controller) system allowed us to
   quickly prototype features during development, and later provided insulation
   between different aspects of our website. The user facing View provides the
@@ -552,7 +552,7 @@ For all of our testing, we used a database that was seeded with 2,500 user accou
   too easy to strain the system.\\
 
 
-  \subsection{Critical Path}
+  \subsection{Critical path}
   Our critical path through our application was the path that we thought the
   average user was most likely to hit.  We had two user models, with a 50\%
   chance that either model was selected for each test user:
