Cleaned up section header for Gems

--- a/cs188_final.tex
+++ b/cs188_final.tex
@@ -305,7 +305,7 @@ for syntactic or logical errors. In doing so, the time from the outlining of a
 feature to pushing production ready code was optimized and we were able to save
 a substantial amount of time.
 
-\subsection{Important gems used for development}
+\subsection{Important gems}
 We utilized several important rails gems that helped make the development of
 our application much easier. The gems listed below added important
 functionality such as user management and wrappers for APIs. Using the gems is
